# grAIder

./: .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: current_implementation.md  extension-e1-plan.md  feature-requests-plan.md  feature_requests.md  implementation-plan.md  index.md  learning_science.md  milestone-1-plan.md  milestone-10-plan.md  milestone-2-plan.md  milestone-3-plan.md  milestone-4-plan.md  milestone-5-plan.md  milestone-6-plan.md  milestone-7-plan.md  milestone-8-plan.md  milestone-9-plan.md  students.md  teachers.md  topic_guides.md
scripts/: check-starters.sh
src/graider/: __init__.py  cli.py  config.py  console.py  criteria.py  errors.py  gitlab_client.py  models.py  names.py  pricing.py  project_config.py  roster.py  state.py  templates.py
src/graider/authoring/: __init__.py  anchors.py  criteria.py
src/graider/feedback/: __init__.py  render.py
src/graider/grading/: __init__.py  history.py  runner.py
src/graider/interview/: __init__.py  agent.py
src/graider/report/: __init__.py  build.py
src/graider/review/: agent.py  cache.py
src/graider/skills/graider/: SKILL.md
src/graider/templates/cpp/: CMakeLists.txt.tmpl  REFLECTION.md.tmpl  dot_gitignore.tmpl  dot_gitlab-ci.yml.tmpl  qlty.toml.tmpl
src/graider/templates/cpp/src/: calc.cpp.tmpl
src/graider/templates/cpp/tests/: test_calc.cpp.tmpl
src/graider/templates/go/: dot_gitignore.tmpl  dot_gitlab-ci.yml.tmpl  go.mod.tmpl  main.go.tmpl  qlty.toml.tmpl
src/graider/templates/go/calc/: calc.go.tmpl
src/graider/templates/java/: build.gradle.kts.tmpl  dot_gitignore.tmpl  dot_gitlab-ci.yml.tmpl  qlty.toml.tmpl
src/graider/templates/java/src/main/java/: App.java.tmpl
src/graider/templates/java/src/test/java/: AppTest.java.tmpl
src/graider/templates/python/: dot_gitignore.tmpl  dot_gitlab-ci.yml.tmpl  pyproject.toml.tmpl  qlty.toml.tmpl
src/graider/templates/rust/: Cargo.toml.tmpl  dot_gitignore.tmpl  dot_gitlab-ci.yml.tmpl  dot_graider.yml.tmpl  qlty.toml.tmpl
src/graider/templates/rust/src/: main.rs.tmpl
src/graider/templates/typescript/: README.md.tmpl  dot_gitignore.tmpl  dot_gitlab-ci.yml.tmpl  package.json.tmpl  tsconfig.json.tmpl
src/graider/templates/typescript/tests/: calc.test.ts.tmpl
tests/: test_anchors.py  test_authoring.py  test_cli.py  test_config.py  test_criteria.py  test_feedback.py  test_gitlab_client.py  test_grading.py  test_history.py  test_interview.py  test_names.py  test_pricing.py  test_project_config.py  test_report.py  test_review.py  test_roster.py  test_skills.py  test_state.py  test_templates.py
tests/integration/: test_grade.py  test_starters.py
