[project]
name = "graider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
]

[project.scripts]
graider = "graider.cli:run"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12",
    "ty",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (needed for Typer)
    "UP045", # Use `X | None` for type annotations (Typer/Click chokes on `|` in option signatures)
]

[tool.ty.environment]
root = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
