[project]
name = "graider"
version = "0.1.2"
description = "A CLI for setting up, grading, and AI-reviewing GitLab coursework projects."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "click>=8.1",  # used directly in cli.py (click.edit); not just a typer transitive
    "rich>=13.7",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "python-gitlab>=4.4",
    "pyyaml>=6.0",
    "anthropic>=0.116.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
google = ["google-genai>=0.3"]

[project.urls]
Homepage = "https://peaktwilight.github.io/grAIder/"
Documentation = "https://peaktwilight.github.io/grAIder/"
Repository = "https://github.com/peaktwilight/grAIder"
Issues = "https://github.com/peaktwilight/grAIder/issues"

[project.scripts]
graider = "graider.cli:run"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest>=8.0",
    "ruff>=0.12",
    "ty",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (needed for Typer)
    "UP045", # Use `X | None` for type annotations (Typer/Click chokes on `|` in option signatures)
]

[tool.ty.environment]
root = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: renders a starter and builds it with a real toolchain (needs uv/gradle/cmake)",
]
